tests/ui/atomics/scope_overreach_gpu.rx
//@ spec: RXS-0080
kernel fn k(a: Atomic<u32, Scope::Block>) {
    a.fetch_add(1, Scope::Gpu); //~ ERROR RX3010
}

fn main() {}
